fixed wrapper issues, created mixins, moved partials to correct place

--- a/styles/sass/components/_utilities.scss
+++ b/styles/sass/components/_utilities.scss
@@ -1,5 +1,8 @@
 .wrapper {
     width: 80%;
-    max-width: 2160px;
+    max-width: 1440px;
     margin: 0 auto;
+    @media (max-width: 900px) {
+        width: 90%;
+    }
 }
