--- a/styles/sass/components/_navigation.scss
+++ b/styles/sass/components/_navigation.scss
@@ -1,9 +1,15 @@
 .navigation {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
+    @include flexIt(row, space-between, center);
     text-transform: uppercase;
     font-family: $montserrat;
+
+    .fa-bars {
+        font-size: 2rem;
+        display: none;
+        @media (max-width: 900px) {
+            display: block;
+        }
+    }
 
     h1:hover {
         transform: scale(1.1);
@@ -11,16 +17,19 @@
     }
 
     &__container {
-        width: 20%;
+        width: 25%;
+        @media (max-width: 900px) {
+            display: none;
+        }
     }
 
     &__list {
         // background-color: green;
         display: flex;
-        justify-content: space-evenly;
+        justify-content: space-between;
         align-items: center;
         width: 100%;
-        font-size: .7rem;
+        font-size: .9rem;
     }
 
     &__list .link {
