--- a/styles/sass/components/_header.scss
+++ b/styles/sass/components/_header.scss
@@ -4,6 +4,9 @@
     background-size: cover;
     background-position: center;
     height: 100vh;
+    @media (max-width: 400px) {
+      height: 90vh;
+    }
 }
 
 #header__blog {
