--- a/styles/sass/partials/_team.scss
+++ b/styles/sass/partials/_team.scss
@@ -6,7 +6,7 @@
     .line {
         width: 1px;
         height: 60px;
-        background: $black;
+        background: $lightGrey;
         position: absolute;
         top: 0;
         left: 50%;
