--- a/styles/sass/partials/_contact-page.scss
+++ b/styles/sass/partials/_contact-page.scss
@@ -11,6 +11,10 @@
     }
 
     &__touch {
+        @media (max-width: 1200px) {
+            text-align: center;
+        }
+
         h3 {
             margin-bottom: 20px;
         }
@@ -20,8 +24,21 @@
         display: flex;
         padding: 100px 50px;
         justify-content: space-evenly;
+        @media (max-width: 1400px) {
+            padding: 0;
+            align-items: center;
+            justify-content: space-between;
+        }
+
+        @media (max-width: 1200px) {
+            padding: 100px 50px;
+            @include flexIt (column, space-evenly, center);
+        }
         
         &--item {
+            @media (max-width: 1200px) {
+                text-align: center;
+            }
 
             h3 {
                 padding: 20px 0 10px 0;
@@ -38,6 +55,9 @@
 
         &--item:nth-of-type(2) {
             position: relative;
+            @media (max-width: 1400px) {
+                padding: 100px 0;
+            }
         }
 
         &--item:nth-of-type(2):before {
@@ -49,6 +69,9 @@
             background: $offWhite;
             left: -50px;
             top: -20px;
+            @media (max-width: 1400px) {
+                top: 50px;
+            }
         }
 
         &--item:nth-of-type(2)::after {
@@ -60,6 +83,9 @@
             background: $offWhite;
             right: -50px;
             top: -20px;
+            @media (max-width: 1400px) {
+                top: 50px;
+            }
         }
     }
 }
@@ -82,6 +108,10 @@ header {
 
     &--details {
         width: 50%;
+        @media (max-width: 1200px) {
+            width: 100%;
+            text-align: center;
+        }
 
         h3 {
             margin-bottom: 20px;
