--- a/styles/sass/partials/_features.scss
+++ b/styles/sass/partials/_features.scss
@@ -44,7 +44,7 @@
                 font-family: $montserrat;
                 color: $black;
                 font-weight: normal;
-                margin-bottom: 20px;
+                margin-bottom: 10px;
                 letter-spacing: 0.3px;
             }
 
@@ -53,6 +53,7 @@
                 color: $lightGrey;
                 width: 80%;
                 line-height: 30px;
+                font-size: 0.8rem;
             }
         }
     }
