--- a/styles/style.css
+++ b/styles/style.css
@@ -783,7 +783,7 @@ a {
   font-family: "Montserrat", sans-serif;
   color: #333;
   font-weight: normal;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   letter-spacing: 0.3px;
 }
 .features__container--copy p {
@@ -791,6 +791,7 @@ a {
   color: #999;
   width: 80%;
   line-height: 30px;
+  font-size: 0.8rem;
 }
 
 .team {
@@ -1212,6 +1213,11 @@ a {
 .contact p {
   color: #999;
 }
+@media (max-width: 1200px) {
+  .contact__touch {
+    text-align: center;
+  }
+}
 .contact__touch h3 {
   margin-bottom: 20px;
 }
@@ -1223,6 +1229,40 @@ a {
   -webkit-box-pack: space-evenly;
       -ms-flex-pack: space-evenly;
           justify-content: space-evenly;
+}
+@media (max-width: 1400px) {
+  .contact__icons {
+    padding: 0;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+}
+@media (max-width: 1200px) {
+  .contact__icons {
+    padding: 100px 50px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+@media (max-width: 1200px) {
+  .contact__icons--item {
+    text-align: center;
+  }
 }
 .contact__icons--item h3 {
   padding: 20px 0 10px 0;
@@ -1236,6 +1276,11 @@ a {
 .contact__icons--item:nth-of-type(2) {
   position: relative;
 }
+@media (max-width: 1400px) {
+  .contact__icons--item:nth-of-type(2) {
+    padding: 100px 0;
+  }
+}
 .contact__icons--item:nth-of-type(2):before {
   content: "";
   position: absolute;
@@ -1245,6 +1290,11 @@ a {
   left: -50px;
   top: -20px;
 }
+@media (max-width: 1400px) {
+  .contact__icons--item:nth-of-type(2):before {
+    top: 50px;
+  }
+}
 .contact__icons--item:nth-of-type(2)::after {
   content: "";
   position: absolute;
@@ -1253,6 +1303,11 @@ a {
   background: #F6F6F6;
   right: -50px;
   top: -20px;
+}
+@media (max-width: 1400px) {
+  .contact__icons--item:nth-of-type(2)::after {
+    top: 50px;
+  }
 }
 
 header .navigation-contact {
@@ -1269,6 +1324,12 @@ header .navigation-contact {
 }
 .contact__title--details {
   width: 50%;
+}
+@media (max-width: 1200px) {
+  .contact__title--details {
+    width: 100%;
+    text-align: center;
+  }
 }
 .contact__title--details h3 {
   margin-bottom: 20px;
