--- a/styles/sass/components/_header.scss
+++ b/styles/sass/components/_header.scss
@@ -13,6 +13,17 @@
 #header__blog {
   background: url(../assets/blog-1.jpeg);
   background-size: cover;
-    background-position: center;
-    height: 100vh;  
+  background-position: center;
+  height: 100vh;
+  @media (max-width: 1000px) {
+    height: 80vh;
+  }  
+
+  @media (max-width: 720px) {
+    height: 60vh;
+  }
+  
+  @media (max-width: 520px) {
+    height: 50vh;
+  }  
 }
