--- a/styles/sass/partials/_branding.scss
+++ b/styles/sass/partials/_branding.scss
@@ -13,7 +13,7 @@
 
     &__image {
        width: 30%;
-       position: relative;
+    //    position: relative;
        margin: 0 auto;
        padding: 200px 0 100px 0;
 
@@ -21,15 +21,23 @@
             position: absolute;
             z-index: 1;
             width: 50%;
-            top: 100px;
+            top: -110px;
             left: -100px;
             img {
                 width: 100%;
+            }
+            @media(max-width: 1200px) {
+                top: -80px;
+                left: -70px;
             }
         }
 
         &--bottom {
             position: relative;
+            //  z-index: 1;
+            // width: 50%;
+            // top: 100px;
+            // left: -100px;
             img {
                 width: 100%;
             }
@@ -43,6 +51,10 @@
     justify-content: center;
     width: 100%;
     padding-bottom: 100px;
+    @media(max-width: 1000px) {
+        flex-direction: column;
+        align-items: center;
+    }
 
     &--left, &--right {
         font-family: $montserrat;
@@ -50,6 +62,10 @@
         text-align: center;
         // background-color: cyan;
         width: 25%;
+        @media(max-width: 1000px) {
+            width: 100%;
+            margin: 20px 0;
+        }
 
         h2 {
             text-transform: uppercase;
