--- a/styles/sass/partials/_team.scss
+++ b/styles/sass/partials/_team.scss
@@ -17,47 +17,136 @@
         text-transform: uppercase;
         text-align: center;
         padding-top: 100px;
+        @media (max-width: 900px) {
+            padding-bottom: 50px;
+        }
     }
 
     &__container {
-    display: flex;
-    flex-wrap: wrap;
-    background: aquamarine;
-    justify-content: center;
-    padding: 100px 0 200px 0;
+        display: grid;
+        gap: 20px;
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: repeat(2, 1fr);
+        padding: 100px 0 200px 0;
+        @media (max-width: 1400px) {
+            grid-template-columns: repeat(3, 1fr);
+            grid-template-rows: repeat(3, 1fr);
+        }
+        @media (max-width: 900px) {
+            grid-template-columns: repeat(2, 1fr);
+            grid-template-rows: repeat(4, 1fr);
+            padding: 0;
+        }
 
         img {
-            margin: 10px;
+            width: 100%;
+        }
+
+        img:nth-of-type(1) {
+            @media (max-width: 1400px) {
+                grid-column: 1 / 2;
+                grid-row: 2 / 2;   
+            }
+            
+            @media (max-width: 900px) {
+                grid-column: 1 / 2;
+                grid-row: 2 / 4;
+            }
+        }
+
+        img:nth-of-type(2) {
+            @media (max-width: 1400px) {
+                grid-column: 2 / 3;
+                grid-row: 2 / 2;   
+            }
+            
+            @media (max-width: 900px) {
+                grid-column: 2 / 3;
+                grid-row: 2 / 4;
+            }
+        }
+
+        img:nth-of-type(3) {
+            @media (max-width: 1400px) {
+                grid-column: 3 / 4;
+                grid-row: 2 / 2;   
+            }
+            
+            @media (max-width: 900px) {
+                grid-column: 1 / 2;
+                grid-row: 3 / 4;
+            }
+        }
+
+        img:nth-of-type(4) {
+            @media (max-width: 1400px) {
+                grid-column: 1 / 2;
+                grid-row: 3 / 3;   
+            }
+            
+            @media (max-width: 900px) {
+                grid-column: 2 / 3;
+                grid-row: 3 / 4;
+            }
+        }
+
+        img:nth-of-type(5) {
+            @media (max-width: 1400px) {
+                grid-column: 2 / 3;
+                grid-row: 3 / 3;   
+            }
+            
+            @media (max-width: 900px) {
+                grid-column: 1 / 2;
+                grid-row: 4 / 4;
+            }
         }
 
         &--description {
-            width: calc(100% / 2 - 35px);
-            height: 270px;
+            grid-column: 1 / 3;
+            grid-row: 1 / 1;
+            @media (max-width: 1400px) {
+                grid-column: 1 / 5;
+                grid-row: 1 / 1;;
+            }
+
+            @media (max-width: 900px) {
+                grid-column: 1 / 3;
+                grid-row: 0 / 4;
+            }
             background: $offWhite;
             display: flex;
             flex-direction: column;
             justify-content: flex-end;
             padding: 50px;
-            margin: 10px;
+            
             h4 {
                 margin-bottom: 20px;
+            }
+
+            p {
+                line-height: 30px;
             }
         }
 
         &--join {
             background: $white;
             text-transform: uppercase;
-            width: calc((100% / 4) - 50px);
-            margin: 10px;
-            height: 270px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
+            grid-column: 4 / 5;
+            grid-row: 2 / 2;
+            @include flexIt(row, center, center);
             font-family: $openSans;
             padding: 50px;
             text-align: center;
-            letter-spacing: 0.3px;
-            font-size: .875rem;
+            @media(max-width: 1400px) {
+                grid-column: 3 / 4;
+                grid-row: 3 / 3;
+            }
+
+            @media (max-width: 900px) {
+                grid-column: 2 / 3;
+                grid-row: 4 / 4;
+            }
         }
     }
 }
