--- a/styles/style.css
+++ b/styles/style.css
@@ -883,24 +883,97 @@ a {
   text-align: center;
   padding-top: 100px;
 }
+@media (max-width: 900px) {
+  .team h3 {
+    padding-bottom: 50px;
+  }
+}
 .team__container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  background: aquamarine;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  display: grid;
+  gap: 20px;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(2, 1fr);
   padding: 100px 0 200px 0;
 }
+@media (max-width: 1400px) {
+  .team__container {
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+  }
+}
+@media (max-width: 900px) {
+  .team__container {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+    padding: 0;
+  }
+}
 .team__container img {
-  margin: 10px;
+  width: 100%;
+}
+@media (max-width: 1400px) {
+  .team__container img:nth-of-type(1) {
+    grid-column: 1/2;
+    grid-row: 2/2;
+  }
+}
+@media (max-width: 900px) {
+  .team__container img:nth-of-type(1) {
+    grid-column: 1/2;
+    grid-row: 2/4;
+  }
+}
+@media (max-width: 1400px) {
+  .team__container img:nth-of-type(2) {
+    grid-column: 2/3;
+    grid-row: 2/2;
+  }
+}
+@media (max-width: 900px) {
+  .team__container img:nth-of-type(2) {
+    grid-column: 2/3;
+    grid-row: 2/4;
+  }
+}
+@media (max-width: 1400px) {
+  .team__container img:nth-of-type(3) {
+    grid-column: 3/4;
+    grid-row: 2/2;
+  }
+}
+@media (max-width: 900px) {
+  .team__container img:nth-of-type(3) {
+    grid-column: 1/2;
+    grid-row: 3/4;
+  }
+}
+@media (max-width: 1400px) {
+  .team__container img:nth-of-type(4) {
+    grid-column: 1/2;
+    grid-row: 3/3;
+  }
+}
+@media (max-width: 900px) {
+  .team__container img:nth-of-type(4) {
+    grid-column: 2/3;
+    grid-row: 3/4;
+  }
+}
+@media (max-width: 1400px) {
+  .team__container img:nth-of-type(5) {
+    grid-column: 2/3;
+    grid-row: 3/3;
+  }
+}
+@media (max-width: 900px) {
+  .team__container img:nth-of-type(5) {
+    grid-column: 1/2;
+    grid-row: 4/4;
+  }
 }
 .team__container--description {
-  width: calc(100% / 2 - 35px);
-  height: 270px;
+  grid-column: 1/3;
+  grid-row: 1/1;
   background: #F6F6F6;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -913,31 +986,58 @@ a {
       -ms-flex-pack: end;
           justify-content: flex-end;
   padding: 50px;
-  margin: 10px;
+}
+@media (max-width: 1400px) {
+  .team__container--description {
+    grid-column: 1/5;
+    grid-row: 1/1;
+  }
+}
+@media (max-width: 900px) {
+  .team__container--description {
+    grid-column: 1/3;
+    grid-row: 0/4;
+  }
 }
 .team__container--description h4 {
   margin-bottom: 20px;
 }
+.team__container--description p {
+  line-height: 30px;
+}
 .team__container--join {
   background: #FFF;
   text-transform: uppercase;
-  width: calc((100% / 4) - 50px);
-  margin: 10px;
-  height: 270px;
+  grid-column: 4/5;
+  grid-row: 2/2;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   font-family: "Open Sans", sans-serif;
   padding: 50px;
   text-align: center;
-  letter-spacing: 0.3px;
-  font-size: 0.875rem;
+}
+@media (max-width: 1400px) {
+  .team__container--join {
+    grid-column: 3/4;
+    grid-row: 3/3;
+  }
+}
+@media (max-width: 900px) {
+  .team__container--join {
+    grid-column: 2/3;
+    grid-row: 4/4;
+  }
 }
 
 .portfolio {
