--- a/styles/style.css
+++ b/styles/style.css
@@ -345,6 +345,16 @@ a {
 .navigation__list .fa-shopping-bag {
   position: relative;
 }
+.navigation__list .fa-shopping-bag::after {
+  content: "2";
+  height: 100%;
+  width: 100%;
+  border-radius: 50%;
+  background: #C3DAB7;
+  position: absolute;
+  bottom: -10px;
+  right: -10px;
+}
 .navigation__logo {
   font-size: 2rem;
   font-weight: bold;
@@ -639,19 +649,26 @@ a {
   background: #999;
 }
 .branding__image {
-  width: 30%;
+  width: 100%;
+  max-width: 30%;
   margin: 0 auto;
-  padding: 200px 0 100px 0;
+  padding: 200px 0 50px 0;
+}
+@media (max-width: 1000px) {
+  .branding__image {
+    max-width: 70%;
+  }
 }
 .branding__image--top {
   position: absolute;
   z-index: 1;
   width: 50%;
-  top: -110px;
-  left: -100px;
+  top: -120px;
+  left: -120px;
 }
 .branding__image--top img {
   width: 100%;
+  max-width: 90%;
 }
 @media (max-width: 1200px) {
   .branding__image--top {
@@ -1006,10 +1023,6 @@ a {
   line-height: 30px;
 }
 .team__container--join {
-  background: #FFF;
-  text-transform: uppercase;
-  grid-column: 4/5;
-  grid-row: 2/2;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1023,9 +1036,15 @@ a {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  background: #FFF;
+  text-transform: uppercase;
+  grid-column: 4/5;
+  grid-row: 2/2;
   font-family: "Open Sans", sans-serif;
   padding: 50px;
   text-align: center;
+  -webkit-transition: all 0.3s ease-out;
+  transition: all 0.3s ease-out;
 }
 @media (max-width: 1400px) {
   .team__container--join {
@@ -1038,6 +1057,10 @@ a {
     grid-column: 2/3;
     grid-row: 4/4;
   }
+}
+.team__container--join:hover {
+  background: #333;
+  color: #F6F6F6;
 }
 
 .portfolio {
