--- a/styles/sass/components/_navigation.scss
+++ b/styles/sass/components/_navigation.scss
@@ -51,6 +51,17 @@
         position: relative;
     }
 
+    &__list .fa-shopping-bag::after {
+        content: "2";
+        height: 100%;
+        width: 100%;
+        border-radius: 50%;
+        background: $lightSage;
+        position: absolute;
+        bottom: -10px;
+        right: -10px;
+    }
+
     &__logo {
         font-size: 2rem;
         font-weight: bold;
