--- a/styles/sass/partials/_branding.scss
+++ b/styles/sass/partials/_branding.scss
@@ -12,19 +12,23 @@
     }
 
     &__image {
-       width: 30%;
-    //    position: relative;
+       width: 100%;
+       max-width: 30%;
        margin: 0 auto;
-       padding: 200px 0 100px 0;
+       padding: 200px 0 50px 0;
+        @media(max-width: 1000px) {
+           max-width: 70%;
+       }
 
           &--top {
             position: absolute;
             z-index: 1;
             width: 50%;
-            top: -110px;
-            left: -100px;
+            top: -120px;
+            left: -120px;
             img {
                 width: 100%;
+                max-width: 90%;
             }
             @media(max-width: 1200px) {
                 top: -80px;
@@ -34,10 +38,6 @@
 
         &--bottom {
             position: relative;
-            //  z-index: 1;
-            // width: 50%;
-            // top: 100px;
-            // left: -100px;
             img {
                 width: 100%;
             }
