--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -4,5 +4,5 @@
 
 //Page specific partials. 
 @import './partials/branding', './partials/slider.scss', './partials/features',
-'./partials/team', './partials/contact', './partials/blog',
+'./partials/team', './partials/portfolio', './partials/blog',
 './partials/contact-page';
