--- a/styles/sass/partials/_contact-page.scss
+++ b/styles/sass/partials/_contact-page.scss
@@ -61,7 +61,6 @@
         }
 
         &--item:nth-of-type(2):before {
-            // background: yellow;
             content: '';
             position: absolute;
             width: 2px;
@@ -75,7 +74,6 @@
         }
 
         &--item:nth-of-type(2)::after {
-            // background: yellow;
             content: '';
             position: absolute;
             width: 2px;
@@ -111,6 +109,7 @@ header {
         @media (max-width: 1200px) {
             width: 100%;
             text-align: center;
+            padding-top: 50px;
         }
 
         h3 {
@@ -127,8 +126,15 @@ header {
         text-transform: uppercase;
         font-family: $montserrat;
         position: relative;
-        top: -100px;
+        top:  -100px;
+        left: 0;
+        @media (max-width: 1200px) {
+            top: 0;
+        }
 
+        @media (max-width: 400px) {
+            font-size: 2rem;
+        }
 
         span {
             display: block;
