--- a/styles/sass/partials/_team.scss
+++ b/styles/sass/partials/_team.scss
@@ -1,4 +1,3 @@
-
 .team {
     background: $white;
     position: relative;
@@ -105,6 +104,12 @@
         &--description {
             grid-column: 1 / 3;
             grid-row: 1 / 1;
+            background: $offWhite;
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-end;
+            padding: 50px;
+
             @media (max-width: 1400px) {
                 grid-column: 1 / 5;
                 grid-row: 1 / 1;;
@@ -114,12 +119,11 @@
                 grid-column: 1 / 3;
                 grid-row: 0 / 4;
             }
-            background: $offWhite;
-            display: flex;
-            flex-direction: column;
-            justify-content: flex-end;
-            padding: 50px;
             
+            @media (max-width: 600px) {
+                padding: 0;
+            }
+
             h4 {
                 margin-bottom: 20px;
             }
@@ -147,6 +151,10 @@
             @media (max-width: 900px) {
                 grid-column: 2 / 3;
                 grid-row: 4 / 4;
+            }
+
+            @media (max-width: 500px) {
+                padding: 0;
             }
 
             &:hover {
