--- a/styles/sass/partials/_branding.scss
+++ b/styles/sass/partials/_branding.scss
@@ -20,6 +20,10 @@
            max-width: 70%;
        }
 
+       @media(max-width: 500px) {
+           max-width: 90%;
+       }
+
           &--top {
             position: absolute;
             z-index: 1;
@@ -33,6 +37,11 @@
             @media(max-width: 1200px) {
                 top: -80px;
                 left: -70px;
+            }
+
+            @media(max-width: 500px) {
+                top: -80px;
+                left: 0;
             }
         }
 
