--- a/styles/sass/partials/_portfolio.scss
+++ b/styles/sass/partials/_portfolio.scss
@@ -27,6 +27,10 @@
             width: 100%;
         }
 
+        @media (max-width: 500px) {
+            padding: 100px 10px;
+        }
+
         h4 {
             text-transform: uppercase;
         }
