--- a/styles/sass/partials/_team.scss
+++ b/styles/sass/partials/_team.scss
@@ -37,6 +37,10 @@
             padding: 0;
         }
 
+        @media (max-width: 500px) {
+            grid-template-rows: repeat(7, 1fr);
+        }
+
         img {
             width: 100%;
         }
@@ -51,6 +55,11 @@
                 grid-column: 1 / 2;
                 grid-row: 2 / 4;
             }
+
+            @media (max-width: 500px) {
+                grid-column: 1 / 3;
+                grid-row: 2 / 7;
+            }
         }
 
         img:nth-of-type(2) {
@@ -62,6 +71,11 @@
             @media (max-width: 900px) {
                 grid-column: 2 / 3;
                 grid-row: 2 / 4;
+            }
+
+            @media (max-width: 500px) {
+                grid-column: 1 / 3;
+                grid-row: 3 / 7;
             }
         }
 
@@ -75,6 +89,11 @@
                 grid-column: 1 / 2;
                 grid-row: 3 / 4;
             }
+
+            @media (max-width: 500px) {
+                grid-column: 1 / 3;
+                grid-row: 4 / 7;
+            }
         }
 
         img:nth-of-type(4) {
@@ -87,6 +106,11 @@
                 grid-column: 2 / 3;
                 grid-row: 3 / 4;
             }
+
+            @media (max-width: 500px) {
+                grid-column: 1 / 3;
+                grid-row: 5 / 7;
+            }
         }
 
         img:nth-of-type(5) {
@@ -98,6 +122,11 @@
             @media (max-width: 900px) {
                 grid-column: 1 / 2;
                 grid-row: 4 / 4;
+            }
+
+            @media (max-width: 500px) {
+                grid-column: 1 / 3;
+                grid-row: 6 / 7;
             }
         }
 
@@ -121,7 +150,12 @@
             }
             
             @media (max-width: 600px) {
-                padding: 0;
+                padding: 50px;
+                text-align: center;
+            }
+
+            @media (max-width: 500px) {
+                justify-content: center;
             }
 
             h4 {
@@ -155,6 +189,8 @@
 
             @media (max-width: 500px) {
                 padding: 0;
+                grid-column: 1 / 3;
+                grid-row: 7 / 7;
             }
 
             &:hover {
