--- a/styles/style.css
+++ b/styles/style.css
@@ -669,6 +669,11 @@ a {
     max-width: 70%;
   }
 }
+@media (max-width: 500px) {
+  .branding__image {
+    max-width: 90%;
+  }
+}
 .branding__image--top {
   position: absolute;
   z-index: 1;
@@ -684,6 +689,12 @@ a {
   .branding__image--top {
     top: -80px;
     left: -70px;
+  }
+}
+@media (max-width: 500px) {
+  .branding__image--top {
+    top: -80px;
+    left: 0;
   }
 }
 .branding__image--bottom {
@@ -809,7 +820,7 @@ a {
       -ms-flex-align: end;
           align-items: flex-end;
   width: 60%;
-  padding: 200px 0 200px 0;
+  padding: 200px 0;
 }
 @media (max-width: 1200px) {
   .features__container {
@@ -830,6 +841,16 @@ a {
             align-items: center;
   }
 }
+@media (max-width: 900px) {
+  .features__container {
+    padding: 100px 0;
+  }
+}
+@media (max-width: 900px) {
+  .features__container {
+    padding: 100px 0 50px 0;
+  }
+}
 .features__container--inner {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -843,11 +864,6 @@ a {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    padding: 50px 0;
-  }
-}
-@media (max-width: 700px) {
-  .features__container--inner {
     padding: 0;
   }
 }
@@ -856,9 +872,20 @@ a {
   display: -ms-flexbox;
   display: flex;
 }
-@media (max-width: 700px) {
+@media (max-width: 900px) {
   .features__container--content {
     padding: 20px;
+  }
+}
+@media (max-width: 500px) {
+  .features__container--content {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
 }
 .features__container--icon {
@@ -873,12 +900,25 @@ a {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  width: 30%;
-  height: 60%;
+  width: 100px;
+  height: 50px;
   margin-right: 30px;
+  padding: 30px 10px;
+}
+@media (max-width: 500px) {
+  .features__container--icon {
+    width: 70px;
+    margin-right: 0;
+  }
 }
 .features__container--icon i {
   font-size: 1.5rem;
+}
+@media (max-width: 500px) {
+  .features__container--copy {
+    text-align: center;
+    padding: 20px 0;
+  }
 }
 .features__container--copy h3 {
   text-transform: uppercase;
@@ -892,13 +932,18 @@ a {
 .features__container--copy p {
   font-family: "Open Sans", sans-serif;
   color: #999;
-  max-width: 90%;
+  width: 90%;
   line-height: 30px;
   font-size: 0.8rem;
 }
 @media (max-width: 1200px) {
   .features__container--copy p {
     color: #333;
+  }
+}
+@media (max-width: 500px) {
+  .features__container--copy p {
+    width: 100%;
   }
 }
 
@@ -945,6 +990,11 @@ a {
     padding: 0;
   }
 }
+@media (max-width: 500px) {
+  .team__container {
+    grid-template-rows: repeat(7, 1fr);
+  }
+}
 .team__container img {
   width: 100%;
 }
@@ -960,6 +1010,12 @@ a {
     grid-row: 2/4;
   }
 }
+@media (max-width: 500px) {
+  .team__container img:nth-of-type(1) {
+    grid-column: 1/3;
+    grid-row: 2/7;
+  }
+}
 @media (max-width: 1400px) {
   .team__container img:nth-of-type(2) {
     grid-column: 2/3;
@@ -970,6 +1026,12 @@ a {
   .team__container img:nth-of-type(2) {
     grid-column: 2/3;
     grid-row: 2/4;
+  }
+}
+@media (max-width: 500px) {
+  .team__container img:nth-of-type(2) {
+    grid-column: 1/3;
+    grid-row: 3/7;
   }
 }
 @media (max-width: 1400px) {
@@ -984,6 +1046,12 @@ a {
     grid-row: 3/4;
   }
 }
+@media (max-width: 500px) {
+  .team__container img:nth-of-type(3) {
+    grid-column: 1/3;
+    grid-row: 4/7;
+  }
+}
 @media (max-width: 1400px) {
   .team__container img:nth-of-type(4) {
     grid-column: 1/2;
@@ -996,6 +1064,12 @@ a {
     grid-row: 3/4;
   }
 }
+@media (max-width: 500px) {
+  .team__container img:nth-of-type(4) {
+    grid-column: 1/3;
+    grid-row: 5/7;
+  }
+}
 @media (max-width: 1400px) {
   .team__container img:nth-of-type(5) {
     grid-column: 2/3;
@@ -1006,6 +1080,12 @@ a {
   .team__container img:nth-of-type(5) {
     grid-column: 1/2;
     grid-row: 4/4;
+  }
+}
+@media (max-width: 500px) {
+  .team__container img:nth-of-type(5) {
+    grid-column: 1/3;
+    grid-row: 6/7;
   }
 }
 .team__container--description {
@@ -1038,7 +1118,15 @@ a {
 }
 @media (max-width: 600px) {
   .team__container--description {
-    padding: 0;
+    padding: 50px;
+    text-align: center;
+  }
+}
+@media (max-width: 500px) {
+  .team__container--description {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
 }
 .team__container--description h4 {
@@ -1086,6 +1174,8 @@ a {
 @media (max-width: 500px) {
   .team__container--join {
     padding: 0;
+    grid-column: 1/3;
+    grid-row: 7/7;
   }
 }
 .team__container--join:hover {
@@ -1140,6 +1230,11 @@ a {
 @media (max-width: 900px) {
   .portfolio__content {
     width: 100%;
+  }
+}
+@media (max-width: 500px) {
+  .portfolio__content {
+    padding: 100px 10px;
   }
 }
 .portfolio__content h4 {
